Fix z-index of menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,7 @@
 .navbar {
     background-color: white;
     height: 6.4rem;
+    z-index: 10;
 }
 
 .brand-logo {
